Bug 1272297 - Do not check pattern validity while parser is creating this input element. r=smaug